<resources>
    <string name="app_name">Shuleni</string>
    <string name="home_title">AndroidTabLayout</string>
    <string name="gallery_title">AndroidTabLayout</string>
    <string name="result_title">AndroidTabLayout</string>

    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="options">Options</string>

    <string name="title_about_us">About</string>
    <string name="title_settings">Settings</string>
    <string name="title_activity_news">News</string>
    <string name="headinglabel">"Students Associated With Your Account"</string>

    <string name="logout">Log Out</string>
     <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
     <string name="name_label">"Name: "</string>
    <string name="name_detail">"Nicholaus Ngailo"</string>
    <string name="comments">"He is a very nice boy and he is very well"</string>
    <string name="notification_title_string">Receive Notifications</string>
    <string name="notification_heading_string">Notification</string>
    <string name="comment_title">Class Teacher Comment:</string>
    <string name="contact_title">Contacts</string>
    <string name="contact_details">0685 09 77 13</string>
    <string name="call_teacher">Call Teacher</string>

    <string name="title_activity_profile">Profile</string>
    <string name="result_title_to_choose">Student Report</string>
    <string name="midterm">MIDTERM</string>
    <string name="terminal">TERMINAL</string>
    <string name="annual">ANNUAL</string>
    <string name="faq">FAQ</string>
    <string name="dialog_title">Select Child</string>
    <string name="heading_at_result">Find all about your Child</string>

    <string name="faq_title">Frequent Asked Questions Area</string>
    <string name="report">Report</string>

    <string name="back">Back</string>
    <string name="report_label">Report For </string>
    <string name="pos">Position</string>
    <string name="actual_position">23</string>
    <string name="see_more">See More</string>
    <string name="download">Download Report</string>
</resources>
