<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorIndicator">
    <com.ramotion.foldingcell.FoldingCell
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/folding_cell"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <FrameLayout
            android:id="@+id/cell_content_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/list_selector"
            android:visibility="gone">
            <ListView
                android:id="@+id/report_listview"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"/>
        </FrameLayout>
        <FrameLayout
            android:id="@+id/cell_title_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/background"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/logo_vva"
                    android:alpha="0.1"
                    android:padding="1dp" />
                <ImageView
                    android:id="@+id/head_pic_detail_at_report"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/image_bg" />
                <TextView
                    android:id="@+id/name_at_report"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name_detail"
                    android:layout_below="@+id/title"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_centerHorizontal="true" />

                <TextView
                    android:id="@+id/see_more"
                    android:layout_width="wrap_content"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"
                    android:text="@string/see_more"
                    android:layout_alignBottom="@+id/head_pic_detail_at_report"
                    android:layout_centerHorizontal="true" />


                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/pos"
                    android:textSize="20sp" />
                <TextView
                    android:id="@+id/title_position"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@+id/title"
                    android:layout_alignRight="@+id/title"
                    android:layout_below="@+id/title"
                    android:layout_marginEnd="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/actual_position"
                    android:textSize="30sp" />
            </RelativeLayout>

</FrameLayout>
</com.ramotion.foldingcell.FoldingCell>
</RelativeLayout>